tried to fix layout issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,12 +30,12 @@
     
 }
 
-/*.natpark-container {
+.natpark-container {
     border-bottom-color:#222222;
     border-bottom-width: 2px;
     border-bottom-style: solid;
     border-width: 80%;
-} */
+} 
 
 .body-text {
     font-size: 16px;
